- improving swagger docs - updating json for some response and requests - adding bounty close endpoint
