# models/bounty.go
@@ -16,13 +16,19 @@ type bountyNewRequest struct {
 // swagger:parameters bountyEndorseRequest
 type bountyEndorseRequest struct {
 	// in: body
-	Body Bounty
+	Body BountyID
+}
+
+// swagger:parameters bountyCloseRequest
+type bountyCloseRequest struct {
+	// in: body
+	Body BountyID
 }
 
 // swagger:parameters bountyGetRequest
 type bountyGetRequest struct {
 	// in: body
-	Body Bounty
+	Body BountyID
 }
 
 // swagger:response bountyResponse
@@ -30,10 +36,14 @@ type bountyResponse struct {
 	Body Bounty
 }
 
+type BountyID struct {
+	ID string `json:"id"`
+}
+
 type Bounty struct {
-	ID           string
-	Title        string
-	Description  string
-	Endorsements []Member
-	IsOpen       bool
+	ID           string   `json:"id"`
+	Title        string   `json:"title"`
+	Description  string   `json:"description"`
+	Endorsements []Member `json:"endorsements"`
+	IsOpen       bool     `json:"isOpen"`
 }
